crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files-2.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"src/commands/first.d.ts\"].utf8_contents().unwrap()"
---
import type { ExitStatus, RunOptions } from "../index";

export default function(options?: Partial<RunOptions>): Promise<ExitStatus>;
