crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files-3.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"src/index.d.ts\"].utf8_contents().unwrap()"
---

import { WitPack } from "./wit-pack/wit-pack";

export default function(): Promise<WitPack>;

