crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files-5.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"src/commands/second-with-dashes.js\"].utf8_contents().unwrap()"
---
import fs from "fs/promises";
import url from "url";
import { init as initWasi, WASI } from "@wasmer/wasi";

let module = undefined;

/** Lazily fetch and compile the WebAssembly module */
async function getModule() {
    if (!module) {
        const path = url.fileURLToPath(new URL("./second-with-dashes.wasm", import.meta.url));
        const wasm = await fs.readFile(path);

        module = WebAssembly.compile(wasm);
    }

    return await module;
}

export default async function(options) {
    const [module, _] = await Promise.all([getModule(), initWasi()]);
    const wasi = options?.wasi || new WASI({}, module);
    const imports = options?.imports || {};

    await wasi.instantiate(module, imports);

    return { code: wasi.start() };
}
