crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files-6.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"src/index.d.ts\"].utf8_contents().unwrap()"
---

// @ts-ignore
import { Wasi } from "@wasmer/wasi";

export type RunOptions = {
    /** An initialized `@wasmer/wasi` object. */
    wasi: Wasi,
    imports: Record<string, WebAssembly.ModuleImports>,
};

export type ExitStatus = {
    code: number,
};
import Bindings from "./bindings";

export type Package = {
    bindings: Bindings,
    commands: {
        first: (options?: Partial<RunOptions>) => Promise<ExitStatus>,
        second_with_dashes: (options?: Partial<RunOptions>) => Promise<ExitStatus>,
    }
};

export default function(): Package;
