crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files-7.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"src/index.js\"].utf8_contents().unwrap()"
---

import first from "./commands/first.js";
import second_with_dashes from "./commands/second-with-dashes.js";
import Bindings from "./bindings/index.js";

export default function() {
    return {
        bindings: new Bindings(),
        commands: {
            first,
            second_with_dashes,
        }
    };
}
