crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files-8.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"src/bindings/index.d.ts\"].utf8_contents().unwrap()"
---
// @ts-ignore
import { Wasi } from "@wasmer/wasi";
import { WitPack } from "./wit-pack/wit-pack";

/**
 * Options used when initializing the bindings.
 */
export type LoadOptions = {
    /** Additional imports to be provided to the WebAssembly module */
    imports: WebAssembly.Imports,
    /**
     * A user-specified WebAssembly module to use instead of the one bundled
     * with this package.
     */
    module: WebAssembly.Module,
};

/**
* Extended options used when loading a WASI library.
 */
export type WasiLoadOptions = LoadOptions & {
    /** An initialized `@wasmer/wasi` object. */
    wasi: Wasi,
};

export default class Bindings {
    wit_pack(options?: Partial<LoadOptions>): Promise<WitPack>;
}
