crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files-9.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"src/wit-pack/index.js\"].utf8_contents().unwrap()"
---
import fs from "fs/promises";
import * as url from "url";
import { WitPack } from "./wit-pack.js";

let module = undefined;

/** Lazily fetch and compile the WebAssembly module */
async function getModule() {
    if (!module) {
        const path = url.fileURLToPath(new URL("./wit_pack_wasm.wasm", import.meta.url));
        const wasm = await fs.readFile(path);

        module = WebAssembly.compile(wasm);
    }

    return await module;
}

export default async function(options) {
    const wrapper = new WitPack();
    const module = await getModule();
    const imports = options?.imports || {};

    await wrapper.instantiate(module, imports);

    return wrapper;
}
