crates/wit-pack/src/js/snapshots/wit_pack__js__tests__generated_files.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: "files[\"package.json\"].utf8_contents().unwrap()"
---
{
  "dependencies": {
    "@wasmer/wasi": "^1.1.2"
  },
  "main": "src/index.js",
  "name": "@wasmer/wit-pack",
  "type": "module",
  "types": "src/index.d.ts",
  "version": "1.2.3"
}
