crates/wit-pack/src/js/snapshots/wit_pack__js__tests__pac.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: got.utf8_contents().unwrap()
---

import { Exports } from "./generated/exports";

declare module "wit-bindgen" {
    /**
     * Load the WebAssembly module.
     */
    function load(): Promise<Exports>;
}

