crates/wit-pack/src/js/snapshots/wit_pack__js__tests__package_json.snap
---
source: crates/wit-pack/src/js/mod.rs
expression: got.utf8_contents().unwrap()
---
{
  "main": "src/wit-pack.js",
  "name": "@wasmerio/wit-pack",
  "type": "module",
  "types": "src/wit-pack.d.ts",
  "version": "0.0.0"
}
